...
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier
            .padding(top = 70.dp)
            .testTag("AnimeList")
    ) {
        items(orderReward) { data ->
            AnimeItem(
                image = data.image,
                title = data.title,
                rate = data.rate,
...
